[gd_scene load_steps=58 format=3 uid="uid://cci6pbiqijfrc"]

[ext_resource type="Script" path="res://scenes/levels/bossfight/boss_fight.gd" id="1_0jx8v"]
[ext_resource type="AudioStream" uid="uid://b8co4c0p8wu8o" path="res://assets/10. Interstellar Stomper-[AudioTrimmer.com].mp3" id="2_3qaxj"]
[ext_resource type="Script" path="res://scenes/levels/bossfight/FireballSpawner.gd" id="3_83x74"]
[ext_resource type="Script" path="res://scenes/levels/bossfight/LightningSpawner.gd" id="4_t5771"]
[ext_resource type="PackedScene" uid="uid://b6ku6v8an3dv7" path="res://scenes/levels/bossfight/projectiles/ligthning.tscn" id="5_wd3a3"]
[ext_resource type="Script" path="res://scenes/levels/bossfight/LaserPilarSpawner.gd" id="6_3qpu8"]
[ext_resource type="Script" path="res://scenes/levels/bossfight/LaserSpinAttack.gd" id="7_5482m"]
[ext_resource type="PackedScene" uid="uid://b2jxl5vngvctt" path="res://scenes/levels/bossfight/projectiles/laser_pillar.tscn" id="8_xuywk"]
[ext_resource type="Script" path="res://scenes/levels/bossfight/SpriteTween.gd" id="9_6xatv"]
[ext_resource type="Texture2D" uid="uid://crebylp7ighm1" path="res://assets/pipo-btleffect209_192.png" id="10_fat1m"]
[ext_resource type="SpriteFrames" uid="uid://di4b3ywotbtqu" path="res://scenes/player/player1.tres" id="11_dscgo"]
[ext_resource type="Texture2D" uid="uid://d2juvulb80ni5" path="res://assets/pipo-nazoobj05c_192.png" id="12_jps7p"]

[sub_resource type="Animation" id="Animation_bngrc"]
resource_name = "Bossfight Scene"
length = 135.0
step = 0.01
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("2_3qaxj")
}],
"times": PackedFloat32Array(0.2)
}
tracks/0/use_blend = true
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FireballSpawner")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 1.99, 3.06, 4.05, 5.07, 6.06, 7, 8.03, 9.06, 10.06, 11.1, 12.08, 13.08, 14.07, 15.06, 16.06, 17.04, 21.05, 25.08, 29.06, 34.02, 43.13, 52.15, 53.15, 56.26, 59.19, 62.14, 66.28, 69.2, 82.22, 85.13, 86.22, 88.26, 90.26, 94.23, 96.31, 97.45, 98.34, 99.17, 102.23, 105.27, 109.13, 114.16, 118.3, 122.34, 125.24, 130.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}, {
"args": [],
"method": &"spawn_fireball"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LightningSpawner")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(18, 19.08, 20.06, 21.05, 22.19, 23.11, 24.11, 25.08, 26.18, 27.11, 28.06, 29.1, 30.15, 31.03, 32.09, 33.07, 34.11, 52.15, 54.2, 55.3, 57.28, 61.18, 63.25, 68.17, 80.2, 84.11, 88.23, 90.33, 93.26, 96.36, 98.42, 103.28, 107.2, 111.3, 114.21, 117.19, 120.59, 124.17, 128.26, 130.42),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}, {
"args": [],
"method": &"call_lightnings"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LaserPilarSpawner")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(34.98, 36.06, 37.05, 38.07, 39.16, 40.21, 41.14, 42.34, 43.2, 44.15, 45.16, 46.14, 47.17, 48.16, 49.11, 50.11, 51.06, 54.22, 58.24, 60.09, 64.17, 65.14, 66.36),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"spawn_pillar_right"
}, {
"args": [],
"method": &"spawn_pillar_left"
}, {
"args": [],
"method": &"spawn_pillar_left"
}, {
"args": [],
"method": &"spawn_pillar_right"
}, {
"args": [],
"method": &"spawn_pillar_right"
}, {
"args": [],
"method": &"spawn_pillar_left"
}, {
"args": [],
"method": &"spawn_pillar_right"
}, {
"args": [],
"method": &"spawn_pillar_left"
}, {
"args": [],
"method": &"spawn_pillar_left"
}, {
"args": [],
"method": &"spawn_pillar_right"
}, {
"args": [],
"method": &"spawn_pillar_right"
}, {
"args": [],
"method": &"spawn_pillar_left"
}, {
"args": [],
"method": &"spawn_pillar_right"
}, {
"args": [],
"method": &"spawn_pillar_right"
}, {
"args": [],
"method": &"spawn_pillar_left"
}, {
"args": [],
"method": &"spawn_pillar_left"
}, {
"args": [],
"method": &"spawn_pillar_right"
}, {
"args": [],
"method": &"spawn_pillar_right"
}, {
"args": [],
"method": &"spawn_pillar_left"
}, {
"args": [],
"method": &"spawn_pillar_right"
}, {
"args": [],
"method": &"spawn_pillar_left"
}, {
"args": [],
"method": &"spawn_pillar_right"
}, {
"args": [],
"method": &"spawn_pillar_left"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LaserSpinAttack")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(78.13, 79.17, 82.29, 84.13, 86.55, 87.97, 90.21, 91.3, 93.22, 94.15, 95.54, 103.12, 104.34, 107.19, 108.29, 112.11, 113.36, 115.99, 117.14, 120.46, 121.6, 122.82, 123.86, 125.26, 127.48, 130.37),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}, {
"args": [],
"method": &"toggle_laser_all"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite/Ark:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(72.65, 75.16),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ypgwo"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3nity"]
_data = {
"Bossfight Scene": SubResource("Animation_bngrc"),
"RESET": SubResource("Animation_ypgwo")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_m2b74"]
atlas = ExtResource("10_fat1m")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmsb8"]
atlas = ExtResource("10_fat1m")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtetj"]
atlas = ExtResource("10_fat1m")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvx3t"]
atlas = ExtResource("10_fat1m")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_x40w8"]
atlas = ExtResource("10_fat1m")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rxjv"]
atlas = ExtResource("10_fat1m")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldw3i"]
atlas = ExtResource("10_fat1m")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_aov1u"]
atlas = ExtResource("10_fat1m")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0gxk"]
atlas = ExtResource("10_fat1m")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2hrc"]
atlas = ExtResource("10_fat1m")
region = Rect2(768, 384, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_f1bna"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2b74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmsb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtetj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvx3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x40w8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rxjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldw3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aov1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0gxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2hrc")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_0osav"]
atlas = ExtResource("12_jps7p")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpb65"]
atlas = ExtResource("12_jps7p")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7j7rw"]
atlas = ExtResource("12_jps7p")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhiwj"]
atlas = ExtResource("12_jps7p")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nmfw"]
atlas = ExtResource("12_jps7p")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_a46o7"]
atlas = ExtResource("12_jps7p")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mivr"]
atlas = ExtResource("12_jps7p")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vim7"]
atlas = ExtResource("12_jps7p")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk036"]
atlas = ExtResource("12_jps7p")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_khn3y"]
atlas = ExtResource("12_jps7p")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0f0q"]
atlas = ExtResource("12_jps7p")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_43uup"]
atlas = ExtResource("12_jps7p")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6p2cx"]
atlas = ExtResource("12_jps7p")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1b1ne"]
atlas = ExtResource("12_jps7p")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_55qn8"]
atlas = ExtResource("12_jps7p")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tiep"]
atlas = ExtResource("12_jps7p")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_77wjj"]
atlas = ExtResource("12_jps7p")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uvnb"]
atlas = ExtResource("12_jps7p")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihsud"]
atlas = ExtResource("12_jps7p")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwl3k"]
atlas = ExtResource("12_jps7p")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtd6q"]
atlas = ExtResource("12_jps7p")
region = Rect2(0, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f656"]
atlas = ExtResource("12_jps7p")
region = Rect2(192, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4md3y"]
atlas = ExtResource("12_jps7p")
region = Rect2(384, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ached"]
atlas = ExtResource("12_jps7p")
region = Rect2(576, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3l7a"]
atlas = ExtResource("12_jps7p")
region = Rect2(768, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4yoe"]
atlas = ExtResource("12_jps7p")
region = Rect2(0, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgc7c"]
atlas = ExtResource("12_jps7p")
region = Rect2(192, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_aw3do"]
atlas = ExtResource("12_jps7p")
region = Rect2(384, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s802"]
atlas = ExtResource("12_jps7p")
region = Rect2(576, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyplm"]
atlas = ExtResource("12_jps7p")
region = Rect2(768, 960, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_40w7x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0osav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpb65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7j7rw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhiwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nmfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a46o7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mivr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vim7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk036")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khn3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0f0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43uup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6p2cx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1b1ne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55qn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tiep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77wjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uvnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihsud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwl3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtd6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f656")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4md3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ached")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3l7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4yoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgc7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aw3do")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s802")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyplm")
}],
"loop": true,
"name": &"default",
"speed": 30.0
}]

[node name="BossFight" type="Node2D"]
script = ExtResource("1_0jx8v")

[node name="TempCamera" type="Camera2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3nity")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -19.536

[node name="FireballSpawner" type="Node2D" parent="."]
script = ExtResource("3_83x74")
activate_hit_scanner = false

[node name="LightningSpawner" type="Node2D" parent="."]
script = ExtResource("4_t5771")
activate_hit_scanner = false

[node name="Ligthning" parent="LightningSpawner" instance=ExtResource("5_wd3a3")]
position = Vector2(-568, 48)
scale = Vector2(4, 4)

[node name="Ligthning2" parent="LightningSpawner" instance=ExtResource("5_wd3a3")]
position = Vector2(-440, 48)
scale = Vector2(4, 4)

[node name="Ligthning3" parent="LightningSpawner" instance=ExtResource("5_wd3a3")]
position = Vector2(-312, 48)
scale = Vector2(4, 4)

[node name="Ligthning4" parent="LightningSpawner" instance=ExtResource("5_wd3a3")]
position = Vector2(-192, 48)
scale = Vector2(4, 4)

[node name="Ligthning5" parent="LightningSpawner" instance=ExtResource("5_wd3a3")]
position = Vector2(-72, 48)
scale = Vector2(4, 4)

[node name="Ligthning6" parent="LightningSpawner" instance=ExtResource("5_wd3a3")]
position = Vector2(72, 48)
scale = Vector2(4, 4)

[node name="Ligthning7" parent="LightningSpawner" instance=ExtResource("5_wd3a3")]
position = Vector2(200, 48)
scale = Vector2(4, 4)

[node name="Ligthning8" parent="LightningSpawner" instance=ExtResource("5_wd3a3")]
position = Vector2(328, 48)
scale = Vector2(4, 4)

[node name="Ligthning9" parent="LightningSpawner" instance=ExtResource("5_wd3a3")]
position = Vector2(448, 48)
scale = Vector2(4, 4)

[node name="Ligthning10" parent="LightningSpawner" instance=ExtResource("5_wd3a3")]
position = Vector2(568, 48)
scale = Vector2(4, 4)

[node name="LaserPilarSpawner" type="Node2D" parent="."]
script = ExtResource("6_3qpu8")
type_toggle = true

[node name="LaserSpinAttack" type="Node2D" parent="."]
position = Vector2(0, -96)
script = ExtResource("7_5482m")
activate_hit_scanner = false

[node name="LaserPillar" parent="LaserSpinAttack" instance=ExtResource("8_xuywk")]
laser_progress = 0.0
type_toggle = true
b_side_collision_toggle = true

[node name="LaserPillar2" parent="LaserSpinAttack" instance=ExtResource("8_xuywk")]
rotation = 1.26536
laser_progress = 0.0
type_toggle = true
b_side_collision_toggle = true

[node name="LaserPillar3" parent="LaserSpinAttack" instance=ExtResource("8_xuywk")]
rotation = -1.26536
laser_progress = 0.0
type_toggle = true
b_side_collision_toggle = true

[node name="Sprite" type="Node2D" parent="."]
script = ExtResource("9_6xatv")

[node name="TimeMagicSprite" type="AnimatedSprite2D" parent="Sprite"]
position = Vector2(0, -104)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_f1bna")
autoplay = "default"
frame_progress = 0.0636812

[node name="BossSprite" type="AnimatedSprite2D" parent="Sprite"]
position = Vector2(0, -104)
scale = Vector2(6, 6)
sprite_frames = ExtResource("11_dscgo")
animation = &"boss_idle"
autoplay = "boss_idle"
frame = 2
frame_progress = 0.339687

[node name="Ark" type="AnimatedSprite2D" parent="Sprite"]
position = Vector2(0, -72)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_40w7x")
autoplay = "default"
frame_progress = 0.176808
